[metadata]
# name = fabulist  # GitHub dependants needs it in setup.py?
version = attr: fabulist.__version__
author = Martin Wendt
author_email = fabulist@wwwendt.de
maintainer = Martin Wendt
maintainer_email = fabulist@wwwendt.de
url = https://github.com/mar10/fabulist/
project_urls =
    Bug Tracker = https://github.com/mar10/fabulist/issues
    Source Code = https://github.com/mar10/fabulist
    Documentation = https://fabulist.readthedocs.io/
    Download = https://github.com/mar10/fabulist/releases/latest
description = "Generate random strings that make sense."
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python test-data word-list generator mock
license = MIT
license_files = LICENSE.txt
classifiers =
    # Development Status :: 3 - Alpha
    Development Status :: 4 - Beta
    # Development Status :: 5 - Production/Stable
    # Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    ; Programming Language :: Python :: 3.7  # EOL 2023-06-27
    ; Programming Language :: Python :: 3.8  # EOL 2024-10
    Programming Language :: Python :: 3.9  
    Programming Language :: Python :: 3.10 
    Programming Language :: Python :: 3.11 
    Programming Language :: Python :: 3.12 
    ; Programming Language :: Python :: 3.13  # EOL 2029-10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = .
packages = find:
zip_safe = False

# scripts =
#   bin/first.py
#   bin/second.py

install_requires =
    # snazzy

# [options.package_data]
# * = *.txt, *.rst
# hello = *.msg

[options.extras_require]
# graph = pydot; rdflib; graphviz
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3
# random = fabulist
# all = pydot; rdflib; graphviz; fabulist

[options.packages.find]
where = .
include_package_data = True
exclude =
    tests
    docs

[options.data_files]
. = 
    CHANGELOG.md

[options.package_data]
fabulist =
    data/*.txt

[options.entry_points]
console_scripts =
    # fabulist = fabulist.leaves_cli:run

[bdist_wheel]
# set universal = 1 if Python 2 and 3 are supported
universal = false
